til_parser.output
Terminals unused in grammar

    tYPE_DOUBLE
    tPRIVATE
    tIFX
    tELSE


Grammar

    0 $accept: file $end

    1 file: ε
    2     | global_declarations
    3     | main
    4     | global_declarations main

    5 main: '(' tPROGRAM block_content ')'

    6 global_declarations: global_declaration
    7                    | global_declarations global_declaration

    8 global_declaration: '(' tPUBLIC var_type tIDENTIFIER opt_global_init ')'
    9                   | '(' tPUBLIC var tIDENTIFIER global_init ')'
   10                   | '(' tPUBLIC tIDENTIFIER global_init ')'
   11                   | '(' tFORWARD var_type tIDENTIFIER ')'
   12                   | '(' tEXTERNAL fun_type tIDENTIFIER ')'
   13                   | '(' var_type tIDENTIFIER opt_global_init ')'
   14                   | '(' var tIDENTIFIER global_init ')'
   15                   | '(' tIDENTIFIER global_init ')'

   16 opt_global_init: ε
   17                | global_init

   18 global_init: literal
   19            | fundef

   20 opt_init: ε
   21         | expr

   22 var: tVAR

   23 block: '(' tBLOCK block_content ')'

   24 block_content: declarations instrs
   25              | declarations
   26              | instrs
   27              | ε

   28 declarations: declaration
   29             | declarations declaration

   30 declaration: '(' var_type tIDENTIFIER opt_init ')'
   31            | '(' var tIDENTIFIER expr ')'

   32 instrs: instr
   33       | instrs instr

   34 instr: block
   35      | expr
   36      | '(' tIF expr instr ')'
   37      | '(' tIF expr instr instr ')'
   38      | '(' tLOOP expr instr ')'
   39      | '(' tSTOP ')'
   40      | '(' tSTOP tINTEGER ')'
   41      | '(' tNEXT ')'
   42      | '(' tNEXT tINTEGER ')'
   43      | '(' tRETURN ')'
   44      | '(' tRETURN expr ')'
   45      | '(' tPRINT exprs ')'
   46      | '(' tPRINTLN exprs ')'
   47      | '(' tCHANGE expr tARROW expr tWITH expr tDOTS expr ')'
   48      | '(' tWITH expr expr expr expr ')'
   49      | '(' tUNLESS expr tFOR expr tDO expr tAPPLY expr ')'
   50      | '(' tSWEEP expr tARROW expr tDOTS expr tWITH expr tIF expr ')'

   51 opt_exprs: ε
   52          | exprs

   53 exprs: expr
   54      | exprs expr

   55 expr: literal
   56     | '(' '-' expr ')'
   57     | '(' '+' expr ')'
   58     | '(' '+' expr expr ')'
   59     | '(' '-' expr expr ')'
   60     | '(' tFIND lval ')'
   61     | '(' '*' expr expr ')'
   62     | '(' '/' expr expr ')'
   63     | '(' '%' expr expr ')'
   64     | '(' '<' expr expr ')'
   65     | '(' '>' expr expr ')'
   66     | '(' tGE expr expr ')'
   67     | '(' tLE expr expr ')'
   68     | '(' tNE expr expr ')'
   69     | '(' tEQ expr expr ')'
   70     | '(' '~' expr ')'
   71     | '(' tAND expr expr ')'
   72     | '(' tOR expr expr ')'
   73     | '(' tREAD ')'
   74     | '(' tSET lval expr ')'
   75     | '(' tOBJECTS expr ')'
   76     | '(' tSIZEOF expr ')'
   77     | lval
   78     | fundef
   79     | '(' tAT opt_exprs ')'
   80     | '(' expr opt_exprs ')'

   81 fundef: '(' tFUNCTION '(' return_type opt_args ')' block_content ')'

   82 data_type: tTYPE_STRING
   83          | tTYPE_INT
   84          | tTYPE_DOUBLE
   85          | fun_type
   86          | data_type '!'

   87 fun_type: '(' return_type '(' var_types ')' ')'
   88         | '(' return_type ')'

   89 return_type: var_type
   90            | void_type

   91 opt_args: ε
   92         | args

   93 args: arg
   94     | args arg

   95 arg: '(' var_type tIDENTIFIER ')'

   96 var_types: var_type
   97          | var_types var_type

   98 var_type: data_type
   99         | void_pointer

  100 void_pointer: void_pointer '!'
  101             | void_type '!'

  102 void_type: tTYPE_VOID

  103 literal: tINTEGER
  104        | tDOUBLE
  105        | tSTRING
  106        | tNULLPTR

  107 lval: tIDENTIFIER
  108     | '(' tINDEX expr expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 86 100 101
    '%' (37) 63
    '(' (40) 5 8 9 10 11 12 13 14 15 23 30 31 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 80 81 87 88 95 108
    ')' (41) 5 8 9 10 11 12 13 14 15 23 30 31 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 80 81 87 88 95 108
    '*' (42) 61
    '+' (43) 57 58
    '-' (45) 56 59
    '/' (47) 62
    '<' (60) 64
    '>' (62) 65
    '~' (126) 70
    error (256)
    tINTEGER <i> (258) 40 42 103
    tDOUBLE <d> (259) 104
    tIDENTIFIER <s> (260) 8 9 10 11 12 13 14 15 30 31 95 107
    tSTRING <s> (261) 105
    tLOOP (262) 38
    tIF (263) 36 37 50
    tPRINT (264) 45
    tREAD (265) 73
    tPROGRAM (266) 5
    tSET (267) 74
    tTYPE_INT (268) 83
    tYPE_DOUBLE (269)
    tTYPE_STRING (270) 82
    tAT (271) 79
    tTYPE_VOID (272) 102
    tEXTERNAL (273) 12
    tTYPE_DOUBLE (274) 84
    tNULLPTR (275) 106
    tFORWARD (276) 11
    tPUBLIC (277) 8 9 10
    tVAR (278) 22
    tBLOCK (279) 23
    tSTOP (280) 39 40
    tWITH (281) 47 48 50
    tNEXT (282) 41 42
    tRETURN (283) 43 44
    tPRINTLN (284) 46
    tAND (285) 71
    tOR (286) 72
    tFIND (287) 60
    tINDEX (288) 108
    tOBJECTS (289) 75
    tSIZEOF (290) 76
    tFUNCTION (291) 81
    tPRIVATE (292)
    tUNLESS (293) 49
    tDO (294) 49
    tFOR (295) 49
    tAPPLY (296) 49
    tDOTS (297) 47 50
    tARROW (298) 47 50
    tSWEEP (299) 50
    tCHANGE (300) 47
    tIFX (301)
    tELSE (302)
    tGE (303) 66
    tLE (304) 67
    tEQ (305) 69
    tNE (306) 68


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    file <sequence> (64)
        on left: 1 2 3 4
        on right: 0
    main <node> (65)
        on left: 5
        on right: 3 4
    global_declarations <sequence> (66)
        on left: 6 7
        on right: 2 4 7
    global_declaration <node> (67)
        on left: 8 9 10 11 12 13 14 15
        on right: 6 7
    opt_global_init <expression> (68)
        on left: 16 17
        on right: 8 13
    global_init <expression> (69)
        on left: 18 19
        on right: 9 10 14 15 17
    opt_init <expression> (70)
        on left: 20 21
        on right: 30
    var <type> (71)
        on left: 22
        on right: 9 14 31
    block <block> (72)
        on left: 23
        on right: 34
    block_content <block> (73)
        on left: 24 25 26 27
        on right: 5 23 81
    declarations <sequence> (74)
        on left: 28 29
        on right: 24 25 29
    declaration <node> (75)
        on left: 30 31
        on right: 28 29
    instrs <sequence> (76)
        on left: 32 33
        on right: 24 26 33
    instr <node> (77)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 32 33 36 37 38
    opt_exprs <sequence> (78)
        on left: 51 52
        on right: 79 80
    exprs <sequence> (79)
        on left: 53 54
        on right: 45 46 52 54
    expr <expression> (80)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 21 31 35 36 37 38 44 47 48 49 50 53 54 56 57 58 59 61 62 63 64 65 66 67 68 69 70 71 72 74 75 76 80 108
    fundef <expression> (81)
        on left: 81
        on right: 19 78
    data_type <type> (82)
        on left: 82 83 84 85 86
        on right: 86 98
    fun_type <type> (83)
        on left: 87 88
        on right: 12 85
    return_type <type> (84)
        on left: 89 90
        on right: 81 87 88
    opt_args <sequence> (85)
        on left: 91 92
        on right: 81
    args <sequence> (86)
        on left: 93 94
        on right: 92 94
    arg <node> (87)
        on left: 95
        on right: 93 94
    var_types <types> (88)
        on left: 96 97
        on right: 87 97
    var_type <type> (89)
        on left: 98 99
        on right: 8 11 13 30 89 95 96 97
    void_pointer <type> (90)
        on left: 100 101
        on right: 99 100
    void_type <type> (91)
        on left: 102
        on right: 90 101
    literal <expression> (92)
        on left: 103 104 105 106
        on right: 18 55
    lval <lvalue> (93)
        on left: 107 108
        on right: 60 74 77


State 0

    0 $accept: • file $end

    '('  shift, and go to state 1

    $default  reduce using rule 1 (file)

    file                 go to state 2
    main                 go to state 3
    global_declarations  go to state 4
    global_declaration   go to state 5


State 1

    5 main: '(' • tPROGRAM block_content ')'
    8 global_declaration: '(' • tPUBLIC var_type tIDENTIFIER opt_global_init ')'
    9                   | '(' • tPUBLIC var tIDENTIFIER global_init ')'
   10                   | '(' • tPUBLIC tIDENTIFIER global_init ')'
   11                   | '(' • tFORWARD var_type tIDENTIFIER ')'
   12                   | '(' • tEXTERNAL fun_type tIDENTIFIER ')'
   13                   | '(' • var_type tIDENTIFIER opt_global_init ')'
   14                   | '(' • var tIDENTIFIER global_init ')'
   15                   | '(' • tIDENTIFIER global_init ')'

    tIDENTIFIER   shift, and go to state 6
    tPROGRAM      shift, and go to state 7
    tTYPE_INT     shift, and go to state 8
    tTYPE_STRING  shift, and go to state 9
    tTYPE_VOID    shift, and go to state 10
    tEXTERNAL     shift, and go to state 11
    tTYPE_DOUBLE  shift, and go to state 12
    tFORWARD      shift, and go to state 13
    tPUBLIC       shift, and go to state 14
    tVAR          shift, and go to state 15
    '('           shift, and go to state 16

    var           go to state 17
    data_type     go to state 18
    fun_type      go to state 19
    var_type      go to state 20
    void_pointer  go to state 21
    void_type     go to state 22


State 2

    0 $accept: file • $end

    $end  shift, and go to state 23


State 3

    3 file: main •

    $default  reduce using rule 3 (file)


State 4

    2 file: global_declarations •
    4     | global_declarations • main
    7 global_declarations: global_declarations • global_declaration

    '('  shift, and go to state 1

    $default  reduce using rule 2 (file)

    main                go to state 24
    global_declaration  go to state 25


State 5

    6 global_declarations: global_declaration •

    $default  reduce using rule 6 (global_declarations)


State 6

   15 global_declaration: '(' tIDENTIFIER • global_init ')'

    tINTEGER  shift, and go to state 26
    tDOUBLE   shift, and go to state 27
    tSTRING   shift, and go to state 28
    tNULLPTR  shift, and go to state 29
    '('       shift, and go to state 30

    global_init  go to state 31
    fundef       go to state 32
    literal      go to state 33


State 7

    5 main: '(' tPROGRAM • block_content ')'

    tINTEGER     shift, and go to state 26
    tDOUBLE      shift, and go to state 27
    tIDENTIFIER  shift, and go to state 34
    tSTRING      shift, and go to state 28
    tNULLPTR     shift, and go to state 29
    '('          shift, and go to state 35

    $default  reduce using rule 27 (block_content)

    block          go to state 36
    block_content  go to state 37
    declarations   go to state 38
    declaration    go to state 39
    instrs         go to state 40
    instr          go to state 41
    expr           go to state 42
    fundef         go to state 43
    literal        go to state 44
    lval           go to state 45


State 8

   83 data_type: tTYPE_INT •

    $default  reduce using rule 83 (data_type)


State 9

   82 data_type: tTYPE_STRING •

    $default  reduce using rule 82 (data_type)


State 10

  102 void_type: tTYPE_VOID •

    $default  reduce using rule 102 (void_type)


State 11

   12 global_declaration: '(' tEXTERNAL • fun_type tIDENTIFIER ')'

    '('  shift, and go to state 16

    fun_type  go to state 46


State 12

   84 data_type: tTYPE_DOUBLE •

    $default  reduce using rule 84 (data_type)


State 13

   11 global_declaration: '(' tFORWARD • var_type tIDENTIFIER ')'

    tTYPE_INT     shift, and go to state 8
    tTYPE_STRING  shift, and go to state 9
    tTYPE_VOID    shift, and go to state 10
    tTYPE_DOUBLE  shift, and go to state 12
    '('           shift, and go to state 16

    data_type     go to state 18
    fun_type      go to state 19
    var_type      go to state 47
    void_pointer  go to state 21
    void_type     go to state 22


State 14

    8 global_declaration: '(' tPUBLIC • var_type tIDENTIFIER opt_global_init ')'
    9                   | '(' tPUBLIC • var tIDENTIFIER global_init ')'
   10                   | '(' tPUBLIC • tIDENTIFIER global_init ')'

    tIDENTIFIER   shift, and go to state 48
    tTYPE_INT     shift, and go to state 8
    tTYPE_STRING  shift, and go to state 9
    tTYPE_VOID    shift, and go to state 10
    tTYPE_DOUBLE  shift, and go to state 12
    tVAR          shift, and go to state 15
    '('           shift, and go to state 16

    var           go to state 49
    data_type     go to state 18
    fun_type      go to state 19
    var_type      go to state 50
    void_pointer  go to state 21
    void_type     go to state 22


State 15

   22 var: tVAR •

    $default  reduce using rule 22 (var)


State 16

   87 fun_type: '(' • return_type '(' var_types ')' ')'
   88         | '(' • return_type ')'

    tTYPE_INT     shift, and go to state 8
    tTYPE_STRING  shift, and go to state 9
    tTYPE_VOID    shift, and go to state 10
    tTYPE_DOUBLE  shift, and go to state 12
    '('           shift, and go to state 16

    data_type     go to state 18
    fun_type      go to state 19
    return_type   go to state 51
    var_type      go to state 52
    void_pointer  go to state 21
    void_type     go to state 53


State 17

   14 global_declaration: '(' var • tIDENTIFIER global_init ')'

    tIDENTIFIER  shift, and go to state 54


State 18

   86 data_type: data_type • '!'
   98 var_type: data_type •

    '!'  shift, and go to state 55

    $default  reduce using rule 98 (var_type)


State 19

   85 data_type: fun_type •

    $default  reduce using rule 85 (data_type)


State 20

   13 global_declaration: '(' var_type • tIDENTIFIER opt_global_init ')'

    tIDENTIFIER  shift, and go to state 56


State 21

   99 var_type: void_pointer •
  100 void_pointer: void_pointer • '!'

    '!'  shift, and go to state 57

    $default  reduce using rule 99 (var_type)


State 22

  101 void_pointer: void_type • '!'

    '!'  shift, and go to state 58


State 23

    0 $accept: file $end •

    $default  accept


State 24

    4 file: global_declarations main •

    $default  reduce using rule 4 (file)


State 25

    7 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 7 (global_declarations)


State 26

  103 literal: tINTEGER •

    $default  reduce using rule 103 (literal)


State 27

  104 literal: tDOUBLE •

    $default  reduce using rule 104 (literal)


State 28

  105 literal: tSTRING •

    $default  reduce using rule 105 (literal)


State 29

  106 literal: tNULLPTR •

    $default  reduce using rule 106 (literal)


State 30

   81 fundef: '(' • tFUNCTION '(' return_type opt_args ')' block_content ')'

    tFUNCTION  shift, and go to state 59


State 31

   15 global_declaration: '(' tIDENTIFIER global_init • ')'

    ')'  shift, and go to state 60


State 32

   19 global_init: fundef •

    $default  reduce using rule 19 (global_init)


State 33

   18 global_init: literal •

    $default  reduce using rule 18 (global_init)


State 34

  107 lval: tIDENTIFIER •

    $default  reduce using rule 107 (lval)


State 35

   23 block: '(' • tBLOCK block_content ')'
   30 declaration: '(' • var_type tIDENTIFIER opt_init ')'
   31            | '(' • var tIDENTIFIER expr ')'
   36 instr: '(' • tIF expr instr ')'
   37      | '(' • tIF expr instr instr ')'
   38      | '(' • tLOOP expr instr ')'
   39      | '(' • tSTOP ')'
   40      | '(' • tSTOP tINTEGER ')'
   41      | '(' • tNEXT ')'
   42      | '(' • tNEXT tINTEGER ')'
   43      | '(' • tRETURN ')'
   44      | '(' • tRETURN expr ')'
   45      | '(' • tPRINT exprs ')'
   46      | '(' • tPRINTLN exprs ')'
   47      | '(' • tCHANGE expr tARROW expr tWITH expr tDOTS expr ')'
   48      | '(' • tWITH expr expr expr expr ')'
   49      | '(' • tUNLESS expr tFOR expr tDO expr tAPPLY expr ')'
   50      | '(' • tSWEEP expr tARROW expr tDOTS expr tWITH expr tIF expr ')'
   56 expr: '(' • '-' expr ')'
   57     | '(' • '+' expr ')'
   58     | '(' • '+' expr expr ')'
   59     | '(' • '-' expr expr ')'
   60     | '(' • tFIND lval ')'
   61     | '(' • '*' expr expr ')'
   62     | '(' • '/' expr expr ')'
   63     | '(' • '%' expr expr ')'
   64     | '(' • '<' expr expr ')'
   65     | '(' • '>' expr expr ')'
   66     | '(' • tGE expr expr ')'
   67     | '(' • tLE expr expr ')'
   68     | '(' • tNE expr expr ')'
   69     | '(' • tEQ expr expr ')'
   70     | '(' • '~' expr ')'
   71     | '(' • tAND expr expr ')'
   72     | '(' • tOR expr expr ')'
   73     | '(' • tREAD ')'
   74     | '(' • tSET lval expr ')'
   75     | '(' • tOBJECTS expr ')'
   76     | '(' • tSIZEOF expr ')'
   79     | '(' • tAT opt_exprs ')'
   80     | '(' • expr opt_exprs ')'
   81 fundef: '(' • tFUNCTION '(' return_type opt_args ')' block_content ')'
  108 lval: '(' • tINDEX expr expr ')'

    tINTEGER      shift, and go to state 26
    tDOUBLE       shift, and go to state 27
    tIDENTIFIER   shift, and go to state 34
    tSTRING       shift, and go to state 28
    tLOOP         shift, and go to state 61
    tIF           shift, and go to state 62
    tPRINT        shift, and go to state 63
    tREAD         shift, and go to state 64
    tSET          shift, and go to state 65
    tTYPE_INT     shift, and go to state 8
    tTYPE_STRING  shift, and go to state 9
    tAT           shift, and go to state 66
    tTYPE_VOID    shift, and go to state 10
    tTYPE_DOUBLE  shift, and go to state 12
    tNULLPTR      shift, and go to state 29
    tVAR          shift, and go to state 15
    tBLOCK        shift, and go to state 67
    tSTOP         shift, and go to state 68
    tWITH         shift, and go to state 69
    tNEXT         shift, and go to state 70
    tRETURN       shift, and go to state 71
    tPRINTLN      shift, and go to state 72
    tAND          shift, and go to state 73
    tOR           shift, and go to state 74
    tFIND         shift, and go to state 75
    tINDEX        shift, and go to state 76
    tOBJECTS      shift, and go to state 77
    tSIZEOF       shift, and go to state 78
    tFUNCTION     shift, and go to state 59
    tUNLESS       shift, and go to state 79
    tSWEEP        shift, and go to state 80
    tCHANGE       shift, and go to state 81
    tGE           shift, and go to state 82
    tLE           shift, and go to state 83
    tEQ           shift, and go to state 84
    tNE           shift, and go to state 85
    '>'           shift, and go to state 86
    '<'           shift, and go to state 87
    '+'           shift, and go to state 88
    '-'           shift, and go to state 89
    '*'           shift, and go to state 90
    '/'           shift, and go to state 91
    '%'           shift, and go to state 92
    '('           shift, and go to state 93
    '~'           shift, and go to state 94

    var           go to state 95
    expr          go to state 96
    fundef        go to state 43
    data_type     go to state 18
    fun_type      go to state 19
    var_type      go to state 97
    void_pointer  go to state 21
    void_type     go to state 22
    literal       go to state 44
    lval          go to state 45


State 36

   34 instr: block •

    $default  reduce using rule 34 (instr)


State 37

    5 main: '(' tPROGRAM block_content • ')'

    ')'  shift, and go to state 98


State 38

   24 block_content: declarations • instrs
   25              | declarations •
   29 declarations: declarations • declaration

    tINTEGER     shift, and go to state 26
    tDOUBLE      shift, and go to state 27
    tIDENTIFIER  shift, and go to state 34
    tSTRING      shift, and go to state 28
    tNULLPTR     shift, and go to state 29
    '('          shift, and go to state 35

    $default  reduce using rule 25 (block_content)
